syntax = "proto3";

package io.shopping.cart.view;

import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";
import "io/shopping/cart/entity/shopping_cart_entity.proto";
import "io/shopping/cart/api/shopping_cart_api.proto";

option java_outer_classname = "CustomerShoppingCartsOuter";

service CustomerShoppingCartsView {
  option (akkaserverless.service) = {
    type: SERVICE_TYPE_VIEW
  };

  rpc GetShoppingCarts(GetShoppingCartsRequest) returns (GetShoppingCartsResponse) {
    option (akkaserverless.method).view.query = {
      query: "SELECT * AS shopping_carts FROM shopping-carts WHERE customer_id = :customer_id"
    };
    option (google.api.http) = {
      get: "/shoppng-carts"
    };
  }

  rpc ProcessItemAdded(entity.ItemAdded) returns (api.ShoppingCart) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
    option (akkaserverless.method).view.update = {
      table: "shopping-carts"
      transform_updates: true
    };
  }

  rpc ProcessItemChanged(entity.ItemChanged) returns (api.ShoppingCart) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
    option (akkaserverless.method).view.update = {
      table: "shopping-carts"
      transform_updates: true
    };
  }

  rpc ProcessItemRemoved(entity.ItemRemoved) returns (api.ShoppingCart) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
    option (akkaserverless.method).view.update = {
      table: "shopping-carts"
      transform_updates: true
    };
  }

  rpc ProcessCartCheckedOut(entity.CartCheckedOut) returns (api.ShoppingCart) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
    option (akkaserverless.method).view.update = {
      table: "shopping-carts"
      transform_updates: true
    };
  }

  rpc ProcessCartShipped(entity.CartShipped) returns (api.ShoppingCart) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
    option (akkaserverless.method).view.update = {
      table: "shopping-carts"
      transform_updates: true
    };
  }

  rpc ProcessCartDelivered(entity.CartDelivered) returns (api.ShoppingCart) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
    option (akkaserverless.method).view.update = {
      table: "shopping-carts"
      transform_updates: true
    };
  }

  rpc ProcessCartDeleted(entity.CartDeleted) returns (api.ShoppingCart) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
    option (akkaserverless.method).view.update = {
      table: "shopping-carts"
      transform_updates: true
    };
  }

  rpc ProcessDatesChanged(entity.DatesChanged) returns (api.ShoppingCart) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
    option (akkaserverless.method).view.update = {
      table: "shopping-carts"
      transform_updates: true
    };
  }
}

message GetShoppingCartsRequest {
  string customer_id = 1;
}

message GetShoppingCartsResponse {
  repeated api.ShoppingCart shopping_carts = 1;
}
